| Summary: | ASTERISK-30349: app_if: Format truncation error | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2022-12-12 08:47:55.000-0600 | Date Closed: | 2022-12-13 09:28:26.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_if |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Fedora 37 GCC 12.2.1 | Attachments: | |
| Description: | {code}
app_if.c: In function 'if_helper': app_if.c:270:48: error: '%s' directive output may be truncated writing up to 63 bytes into a region of size 61 [-Werror=format-truncation=] 270 | snprintf(varname, sizeof(varname), "%s_%s", prefix, label); | ^~ app_if.c:270:9: note: 'snprintf' output between 4 and 67 bytes into a destination of size 64 270 | snprintf(varname, sizeof(varname), "%s_%s", prefix, label); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {code} | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-12-13 09:28:28.223-0600 Change 19722 merged by Joshua Colp: app_if: Fix format truncation errors. [https://gerrit.asterisk.org/c/asterisk/+/19722|https://gerrit.asterisk.org/c/asterisk/+/19722] By: Friendly Automation (friendly-automation) 2022-12-13 09:28:37.441-0600 Change 19706 merged by Joshua Colp: app_if: Fix format truncation errors. [https://gerrit.asterisk.org/c/asterisk/+/19706|https://gerrit.asterisk.org/c/asterisk/+/19706] By: Friendly Automation (friendly-automation) 2022-12-13 09:29:01.227-0600 Change 19721 merged by Joshua Colp: app_if: Fix format truncation errors. [https://gerrit.asterisk.org/c/asterisk/+/19721|https://gerrit.asterisk.org/c/asterisk/+/19721] | ||